syntax = "proto3";

import "message.proto";
import "id_registry_event.proto";

enum GossipVersion {
  GOSSIP_VERSION_V1 = 0;
  GOSSIP_VERSION_V1_1 = 1;
}

message GossipAddressInfo {
  string address = 1;
  uint32 family = 2;
  uint32 port = 3;
  string dns_name = 4;
}

message ContactInfoContent {
  GossipAddressInfo gossip_address = 1;
  GossipAddressInfo rpc_address = 2;
  repeated string excluded_hashes = 3;
  uint32 count = 4;
  string hub_version = 5;
  FarcasterNetwork network = 6;
  string app_version = 7;
}

message PingMessageBody {
    bytes ping_origin_peer_id = 1;
    uint64 ping_timestamp = 2;
}

message AckMessageBody {
    bytes ping_origin_peer_id = 1;
    bytes ack_origin_peer_id = 2;
    uint64 ping_timestamp = 3;
    uint64 ack_timestamp = 4;
}

message NetworkLatencyMessage {
    oneof body {
        PingMessageBody ping_message = 2;
        AckMessageBody ack_message = 3;
    }
}

message GossipMessage {
  oneof content {
    Message message = 1;
    IdRegistryEvent id_registry_event = 2;
    ContactInfoContent contact_info_content = 3;
    NetworkLatencyMessage network_latency_message = 7;
  }
  repeated string topics = 4;
  bytes peer_id = 5;
  GossipVersion version = 6;
}
